--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 [] credentials to .env file
-[] https://www.npmjs.com/package/simple-color-logger
+[] initialize / with data dumps from sos at 2am
+[] flag individual company to watch for update 
 [] accept -1 to crawl all, or pass in BusinessType directly
 [] Timing of the fetch, PDF parsing CLI visual output for duration estimation
 [] Logger by each business type, save to file, duration - stability
@@ -10,12 +11,16 @@
 [] search box for first, last name, business purpose, results grid
 [] highlight company detail expands from right drawer
 [] template scraper files for lawyer site
+[] search names
+[] remove stopwords
+[] flag for similar string in names/business name
 [] export search results csv
-[] Rest API search, view company
+[] Rest API search, CRUD company
 [] Dockerfile, docker-compose file 
 [] Fuzzy search
 [] foreverd module
 [] cli yargs per readme, first and last 100 business console.log
+[X] https://www.npmjs.com/package/simple-color-logger
 
 * PDF processing
 * mongo/mongoose schema
