--- a/TODO
+++ b/TODO
@@ -36,6 +36,37 @@
         [] party
         [] bread
         [] catering
+        [] wedding
+        [] cbd
+        [] marij
+        [] construction
+        [] drywall
+        [] contractor
+        [] flooring
+        [] tiling
+        [] tile
+        [] health
+        [] hobby
+        [] science
+        [] chem
+        [] nature
+        [] environment
+        [] home
+        [] plumb
+        [] laund
+        [] garden
+        [] cloth
+        [] hand
+        [] clean
+        [] house
+        [] recycl
+        [] instruments
+        [] pet care
+        [] handmade
+        [] music
+        [] film
+        [] theater
+        [] stage
     [] all non-profits
 
 [] proxy credentials to .env file
