--- a/TODO
+++ b/TODO
@@ -110,3 +110,11 @@
 * /statistics
 * /wacorp?id=
 * /keyword?search=
+
+
+        DONE SO FAR
+*CHANGE THE CODE TO TYPESCRIPT
+*REPLACE P-LIMIT WITH P-QUEUE
+*IMPLEMENT SEARCH BY KEYWORDS
+*REMOVE UNUSED DEPENDENCIES
+
