--- a/TODO
+++ b/TODO
@@ -1,13 +1,40 @@
+(2020-07-11) TODO:
+    * header row in csv Business doesn't have quotes
+    * "Return Address Filing Mailing Street Address (2" is missing the last paran 
+    * use sentence case for first and last name for all positions, i.e. Steve not STEVE
+    * use sentence case for "Authorized Peson Signer Title" i.e. "Governer"
+    *  "Return Address for Filing Attention Email" is missing @ and . in the email
+    *  "Registered Agent Email" is missing @ and . in email
+    * Registered Agent First and Last Name sentence case, i.e. Steve not STEVE
+    * Sentence case for "Governor Type" and add space for "GOVERNINGPERSON" i.e. "Governing Person"
+    * Check all zip codes for trailing '-' i.e. convert  "98264 - " to  "98264"
+    * Principal Office Email is missing @ and . 
+    * switch the file name to be [company]-date-time.csv, so all companies are grouped together
 
-[] cli arguments
+    Other:
+    keywordsFetch duplicates code instead of inheriting or calling fetchTable, however fetchTable appears to be the same
+    added a new name in the keywords.json file, fetch - which provides the keywords file from a remote location, you need to ignore this for now
+
+
+cli arguments:
     [] search contains (active)
-    [] search format in keywords
+    [] search format in keywords.json
     [] output keywords-filename with aggregate entities in csv
-    [] append date for each run
-[] proxy credentials to .env file and proxy.json file
-[] summary of each keyword/file and estimate in fetches
-[] concurrency, no of concurrent http threads
+    [] proxy credentials to .env file and proxy.json file
+    [] concurrency, no of concurrent http threads
 
+    to use a directory with keyword_group.json files:
+    yarn start ./dist/scraper --concurrency 25 --keywords ./keywords --output ./csv-output --verbosity DEBUG --proxy
+
+    to use business types:
+    yarn start ./dist/scraper --concurrency 25 --business_type ALL --output ./csv-output --verbosity DEBUG --proxy
+
+commands to convert keywords.json to alpha sort list:
+- cat keywords.json | sed "s/[\",]//g" > naked_keywords     
+- sort -u naked_keywords | awk '{$1=$1};1' > keywords_alpha
+- 
+
+[] summary of each keyword/file and estimate in fetches
 [] template logging, threads, forever and cron parameters
 [] template lawyer scraper cli
 [] template corporation scraper cli
